--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
         enabled: false
 
 gmail:
-  username: yfr.huang
-  password: bjzpziapsqzpbasz
+  username: yfr.huang@gmail.com
+  password: alvmrykqxgqcjbqo
 
 ---
 
